hphp/test/zend/good/ext/intl/tests/bug60192-compare.php.expectf

Catchable fatal error: Collator not initialized in %s/bug60192-compare.php on line 9
